/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'org.javamodularity.moduleplugin' version '1.8.7' apply false
}

repositories {
    // Use the plugin portal to apply community plugins in convention plugins.
    gradlePluginPortal()
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.javamodularity.moduleplugin'

    group = 'nl.queuemanager'
    version = '4.0-SNAPSHOT'

    sourceCompatibility = 15
    targetCompatibility = 15

    repositories {
        mavenLocal()
        mavenCentral()
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok:1.18.20'
        annotationProcessor 'org.projectlombok:lombok:1.18.20'

        testImplementation 'org.projectlombok:lombok:1.18.20'
        testImplementation 'junit:junit:[4,5)'
        testImplementation 'org.mockito:mockito-core:3.11.1'
    }

}